# gitsh

./: Makefile.am  configure.ac
lib/gitsh/: environment.rb  git_repository.rb  prompter.rb
spec/units/: environment_spec.rb  prompter_spec.rb
